--- a/TP_Vagrant/vag1/index.html
+++ b/TP_Vagrant/vag1/index.html
@@ -1,1 +1,8 @@
-<!DOCTYPE html><html><head><title>TP5</title></head><body><h1>Hello Vagrant</h1></body></html>" 
+<!DOCTYPE html>
+<html>
+<head>
+<title>
+TP5
+</title>
+</head><body><h1>Hello Vagrant</h1></body></html>
+
