--- a/TP_Vagrant/vag1/index.html
+++ b/TP_Vagrant/vag1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>
-TP5
+TP5   # sudo cp nginx.conf /etc/nginx/nginx.conf
 </title>
 </head><body><h1>Hello Vagrant</h1></body></html>
 
